# QSPClients

./: .clang-format  .gitignore  CMakeLists.txt  README.md
analysis/: SyncLatencyCalculation.ipynb
analysis/.ipynb_checkpoints/: Draw Map with Rectangles-checkpoint.ipynb  SyncLatencyCalculation-checkpoint.ipynb
proto/: ChunkChanges.proto  LowerLevelHashes.proto  SyncResponse.proto
src/: ChunkLogger.cpp  ChunkLogger.h  EvaluationSyncClient.cpp  P2PModeSyncClient.cpp  P2PModeSyncClient.h  QuadTree.cpp  QuadTree.h  QuadTreeStructs.h  ServerModeSyncClient.cpp  ServerModeSyncClient.h  StateVectorSyncClient.cpp  StateVectorSyncClient.h  SyncParticipant.cpp  SyncParticipant.h  SyncTree.cpp  SyncTree.h  SyncTreeNLevelEvaluation.cpp  Testclient.cpp  main.cpp
src/csv/: CSVReader.cpp  CSVReader.h  ChunkFileReader.cpp  ChunkFileReader.h
src/datastore/: HashStorage.cpp  HashStorage.h  lru-cache.h
src/logging/: ChunkLogger.cpp  ChunkLogger.h
src/proto/: ChunkChanges.pb.cc  ChunkChanges.pb.h  LowerLevelHashes.pb.cc  LowerLevelHashes.pb.h  SyncResponse.pb.cc  SyncResponse.pb.h
src/svs/: client_main.cpp  svs.cpp  svs.hpp
src/zip/: GZip.h
test/: QuadTreeTests.cpp  SyncParticipantTests.cpp  SyncTreeTests.cpp  tests.cpp
